--- a/client/src/app/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variant-revise/variant-revise.form.html
@@ -1,12 +1,15 @@
-<nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
+<nz-spin nzTip="Submitting"
+  [nzSpinning]="this.loading">
   <form nz-form
+    *ngIf="formModel"
     [formGroup]="formGroup"
     (ngSubmit)="submitRevision(formModel)"
     nzLayout="vertical">
 
     <ng-container *ngTemplateOutlet="formMessages"></ng-container>
 
-    <formly-form *ngIf="!this.success" [form]="formGroup"
+    <formly-form *ngIf="!this.success"
+      [form]="formGroup"
       [fields]="formFields"
       [model]="formModel"
       [options]="formOptions"
@@ -41,12 +44,11 @@
      <h4>formModel</h4>
      <p>To speed up form updates, comment out or remove this formModel debug block.</p>
      <ngx-json-viewer *ngIf="formModel"
-     [json]="formModel"></ngx-json-viewer>
+     [json]="formModel.fields.organization"></ngx-json-viewer>
      </div>
      <div nz-col
      nzSpan="12">
      <ngx-json-viewer *ngIf="formGroup"
      [json]="formGroup.value"></ngx-json-viewer>
      </div>
-     </div>
- -->
+     </div> -->
