Consistent capitalization of "CIViC".

--- a/client/src/app/views/pages/pages-help/pages-help.page.html
+++ b/client/src/app/views/pages/pages-help/pages-help.page.html
@@ -56,8 +56,8 @@
                 <nz-card nzType="inner"
                   nzTitle="News and Updates"
                   style="width: 100%">
-                  Please follow our twitter account <a href="https://twitter.com/CIViCdb"
-                    target="_blank">@CIVICdb</a>.
+                  Please follow our Twitter account <a href="https://twitter.com/CIViCdb"
+                    target="_blank">@CIViCdb</a>.
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="8">
