Remove auto-refresh from full activity feed

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -101,7 +101,7 @@
         style="min-height: 600px"
         nzSize="small"
         class="home-card">
-        <cvc-event-feed [showFilters]="false" [mode]="feedMode" [pageSize]="12" tagDisplay="hideOrg"></cvc-event-feed>
+        <cvc-homepage-event-feed [pageSize]="12"></cvc-homepage-event-feed>
       </nz-card>
     </nz-col>
   </nz-row>
