--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -1,21 +1,11 @@
 <nz-card [nzTitle]="titleTemplate"
-  cvcAutoHeightCard="40"
-  [nzExtra]="loadMoreBtn">
-  <ng-template #loadMoreBtn>
-    <ng-container *ngrxLet="pageInfo$ as pageInfo">
-      <button [disabled]="!pageInfo.hasNextPage"
-        nzSize="small"
-        (click)="loadMore(pageInfo.endCursor)"
-        nz-button
-        nzBlock>Load {{fetchMorePageSize}} More</button>
-    </ng-container>
-  </ng-template>
+  cvcAutoHeightCard="40">
   <nz-table #virtualTable
     [cvcAutoHeightTable]="20"
     nzSize="small"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzData]="evidence$ | ngrxPush"
-    [nzLoading]="isLoading$ | ngrxPush"
+    [nzLoading]="isLoading"
     [nzScroll]="{ x: '100%', y: '600px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
