--- a/client/src/app/components/variants/variants-table/variants-table.component.html
+++ b/client/src/app/components/variants/variants-table/variants-table.component.html
@@ -1,7 +1,9 @@
-<nz-card [nzTitle]="titleTemplate">
+<nz-card [nzTitle]="titleTemplate"
+  cvcAutoHeightCard="40">
   <ng-container *ngIf="{ value: data$ | ngrxPush } as data">
     <nz-table #variantsTable
-      nzSize="small"
+      [cvcAutoHeightTable]="20"
+      kzSize="small"
       [nzData]="(variants$ | ngrxPush)"
       [nzLoading]="(isLoading$ | ngrxPush)"
       [nzFrontPagination]="false"
@@ -32,21 +34,26 @@
             [nzSortFn]="true"
             [nzColumnKey]="sortColumns.EvidenceScore"
             nz-tooltip
-            nzTooltipTitle="Evidence Score"><div style="min-width: 60px; text-align: right;">
-            <i nz-icon nzType="civic:evidence"></i>&nbsp;Score
-            </div></th>
+            nzTooltipTitle="Evidence Score">
+            <div style="min-width: 60px; text-align: right;">
+              <i nz-icon
+                nzType="civic:evidence"></i>&nbsp;Score
+            </div>
+          </th>
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.EvidenceItemCount"
             [nzSortFn]="true"
             nz-tooltip
-            nzTooltipTitle="Evidence Count"><i nz-icon nzType="civic:evidence"></i></th>
+            nzTooltipTitle="Evidence Count"><i nz-icon
+              nzType="civic:evidence"></i></th>
           <th nzWidth="3%"
             nzRight
             [nzColumnKey]="sortColumns.AssertionCount"
             [nzSortFn]="true"
             nz-tooltip
-            nzTooltipTitle="Assertion Count"><i nz-icon nzType="civic:assertion"></i></th>
+            nzTooltipTitle="Assertion Count"><i nz-icon
+              nzType="civic:assertion"></i></th>
         </tr>
         <tr>
           <th>
@@ -145,7 +152,8 @@
             <cvc-variant-tag [variant]="variant"></cvc-variant-tag>
           </td>
           <td>
-            <cvc-plain-tag-overflow [tags]="variant.aliases | pluck: 'name'" [matchingText]="variantAliasInput"></cvc-plain-tag-overflow>
+            <cvc-plain-tag-overflow [tags]="variant.aliases | pluck: 'name'"
+              [matchingText]="variantAliasInput"></cvc-plain-tag-overflow>
           </td>
           <td>
             <cvc-gene-tag [gene]="{id: variant.geneId, name: variant.geneName, link: variant.geneLink}"></cvc-gene-tag>
@@ -181,18 +189,22 @@
 </nz-card>
 
 <ng-template #titleTemplate>
-  <i nz-icon nzType="civic:variant"></i>
+  <i nz-icon
+    nzType="civic:variant"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
   <ng-container *ngIf="this.cvcTitle">
     {{ this.cvcTitle }}
   </ng-container>
-  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
+    nz-typography
+    nzType="secondary">
     ({{totalCount}} total, showing {{visibleCount}}<span *ngIf="totalCount && filteredCount < totalCount"> of {{filteredCount}} filtered</span>)
   </span>
   <ng-template #noData>
-    <span nz-typography nzType="secondary">
+    <span nz-typography
+      nzType="secondary">
       (0 total)
     </span>
   </ng-template>
