--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.less
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.less
@@ -1,18 +1,7 @@
 @import "themes/global-variables.less";
+@import "themes/overrides/descriptions-overrides.less";
 
 :host {
   display: block;
 }
 
-.status-tags ::ng-deep {
-  nz-tag {
-    margin-right: 0;
-  }
-  .ant-descriptions-item-label {
-    white-space: nowrap;
-  }
-}
-
-::ng-deep .ant-descriptions-item-label {
-  font-weight: bold;
-}
