--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -46,7 +46,7 @@
           {{ assertion.variantOrigin | evidenceEnumDisplay }}
         </nz-descriptions-item>
 
-        <nz-descriptions-item *ngIf="assertion.assertionType == 'PREDISPOSING' else ampLevel" nzTitle="ACMG Codes" nzSpan="2">
+        <nz-descriptions-item *ngIf="assertionRules.requiresAcmgCodes(assertion.assertionType)" nzTitle="ACMG Codes" nzSpan="2">
           <ng-container *ngIf="assertion.acmgCodes.length > 0; else noAcmg">
             <nz-tag nz-tooltip [nzTooltipTitle]="code.description" *ngFor="let code of assertion.acmgCodes">{{ code.code }}</nz-tag> 
           </ng-container>
@@ -55,11 +55,18 @@
           </ng-template>
         </nz-descriptions-item>
 
-        <ng-template #ampLevel>
-          <nz-descriptions-item nzTitle="AMP/ASCO/CAP Category">
-            {{ assertion.ampLevel | formatAmp: 'compact' | ifEmpty: '--' }}
-          </nz-descriptions-item>
-        </ng-template>
+        <nz-descriptions-item *ngIf="assertionRules.requiresClingenCodes(assertion.assertionType)" nzTitle="ClinGen/CGC/VICC Codes" nzSpan="2">
+          <ng-container *ngIf="assertion.clingenCodes.length > 0; else noClingen">
+            <nz-tag nz-tooltip [nzTooltipTitle]="code.description" *ngFor="let code of assertion.clingenCodes">{{ code.code }}</nz-tag> 
+          </ng-container>
+          <ng-template #noClingen>
+            --
+          </ng-template>
+        </nz-descriptions-item>
+
+        <nz-descriptions-item *ngIf="assertionRules.requiresAmpLevel(assertion.assertionType)" nzTitle="AMP/ASCO/CAP Category">
+          {{ assertion.ampLevel | formatAmp: 'compact' | ifEmpty: '--' }}
+        </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="Regulatory Approval">
           <i nz-icon *ngIf="assertion.regulatoryApproval" nzType="check-circle" nzTheme="twotone" nzTwotoneColor="#52c41a"></i>
